# apps/backend/src/automations/dto/create-automation.dto.ts
@@ -1,20 +1,14 @@
-import { IsOptional, IsString, ValidateNested } from 'class-validator';
+import { IsString, ValidateNested } from 'class-validator';
 import { Type } from 'class-transformer';
 
 import { Automation } from '../schemas/automation.schema';
-import { AutomationVersion } from '../schemas/automation-version.schema';
-import { AutomationTrigger } from '../schemas/automation-trigger.schema';
+import { TriggerReceivedMessageTask } from '../schemas/automation-tasks.schema';
 
-export class CreateAutomationDto
-  implements
-    Pick<Automation, 'name'>,
-    Partial<Pick<AutomationVersion, 'trigger'>>
-{
+export class CreateAutomationDto implements Pick<Automation, 'name'> {
   @IsString()
   name: string;
 
   @ValidateNested()
-  @Type(() => AutomationTrigger)
-  @IsOptional()
-  trigger?: AutomationTrigger;
+  @Type(() => TriggerReceivedMessageTask)
+  trigger?: TriggerReceivedMessageTask;
 }
