# apps/backend/src/automations/schemas/automation-step.schema.ts
@@ -1,24 +1,8 @@
 import { Prop as MongooseProp, Schema } from '@nestjs/mongoose';
-import { IsNumber, IsString, ValidateNested } from 'class-validator';
+import { IsString, ValidateNested } from 'class-validator';
 import { AutomationTask } from './automation-tasks.schema';
 import { Type } from 'class-transformer';
-
-@Schema({ _id: false })
-export class AutomationStepPosition {
-  @MongooseProp({
-    type: Number,
-    required: true,
-  })
-  @IsNumber()
-  x: number;
-
-  @MongooseProp({
-    type: Number,
-    required: true,
-  })
-  @IsNumber()
-  y: number;
-}
+import { AutomationPosition } from './automation-position.schema';
 
 @Schema({ _id: false })
 export class AutomationStep {
@@ -30,12 +14,12 @@ export class AutomationStep {
   id: string;
 
   @MongooseProp({
-    type: AutomationStepPosition,
+    type: AutomationPosition,
     required: true,
   })
   @ValidateNested()
-  @Type(() => AutomationStepPosition)
-  position: AutomationStepPosition;
+  @Type(() => AutomationPosition)
+  position: AutomationPosition;
 
   @MongooseProp({
     type: AutomationTask,
